feat(dashboard): add project analytics and charts
- Import and register Chart.js with Line and Doughnut components
- Add Project interface with id, name, status, category, and payment fields
- Fetch projects data from /projects endpoint on component mount
- Add projectStats computed property to calculate project status breakdown
- Add projectsPerMonth computed property to track projects created over last 6 months
- Add projectsByCategory computed property to group projects by category
- Create monthlyChartData computed property for line chart visualization
- Create categoryChartData computed property for doughnut chart visualization
- Configure chart options for responsive rendering and legend display
- Add "Active Projects" stat card to dashboard with in-progress count
- Replace "Sync GitHub" button with "New Project" button in CTA section
- Update loading skeleton grid from 3 to 4 columns and add chart/list skeletons
- Add charts section displaying monthly projects trend and category distribution
- Enhance dashboard layout to accommodate new project analytics and visualizations

--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
     "@vueuse/nuxt": "^14.1.0",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "nuxt": "^4.2.2",
     "ogl": "^1.0.11",
     "tailwindcss": "^4.1.18",
+    "vue-advanced-cropper": "^2.8.9",
+    "vue-chartjs": "^5.3.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
