style: format code and add favicon assets
- Convert all double quotes to single quotes across Vue components and TypeScript files
- Update semicolon usage to follow ESLint configuration standards
- Improve code formatting in app.vue, UserMenu.vue, and other components
- Add null safety check in Plasma.vue hexToRgb function
- Add descriptive comment for empty catch block in Plasma.vue
- Add favicon and PWA manifest files (multiple resolutions)
- Update favicon.ico with new icon
- Add site.webmanifest for PWA configuration
- Create new todos.vue page component
- Update ESLint configuration and package dependencies
- Standardize code style across the frontend application for consistency

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^4.1.18",
     "vue-advanced-cropper": "^2.8.9",
     "vue-chartjs": "^5.3.3",
+    "vuedraggable": "^4.1.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
