--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@iconify-json/simple-icons": "^1.2.63",
     "@nuxt/ui": "^4.3.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/canvas-confetti": "^1.9.0",
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
     "@vueuse/nuxt": "^14.1.0",
+    "canvas-confetti": "^1.9.4",
     "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "nuxt": "^4.2.2",
